--- a/css/style.css
+++ b/css/style.css
@@ -652,3 +652,13 @@ h1, h2 {
     font-size: 12px;
     color: #777;
 }
+
+/* SEO hidden heading */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+}
